# ChangeLog for sys-process/cronutils
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/cronutils/ChangeLog,v 1.2 2012/02/20 04:21:59 floppym Exp $

  20 Feb 2012; Mike Gilbert <floppym@gentoo.org> metadata.xml:
  Drop no-herd.

*cronutils-1.1 (08 Dec 2011)

  08 Dec 2011; Lance Albertson <ramereth@gentoo.org> +cronutils-1.1.ebuild,
  +metadata.xml:
  Initial ebuild
