@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/cronutils/cronutils-1.1.ebuild,v 1.1 2011/12/08 21:15:40 ramereth Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/cronutils/cronutils-1.1.ebuild,v 1.2 2012/02/29 15:29:32 ago Exp $
 
 EAPI=4
 
@@ -12,7 +12,7 @@ SRC_URI="http://cronutils.googlecode.com/files/${P}.tar.gz"
 
 LICENSE="Apache-2.0"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 ~x86"
 IUSE=""
 
 DEPEND=""
