@@ -1,6 +1,9 @@
 # ChangeLog for sys-process/cronutils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/cronutils/ChangeLog,v 1.2 2012/02/20 04:21:59 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/cronutils/ChangeLog,v 1.3 2012/02/29 15:29:32 ago Exp $
+
+  29 Feb 2012; Agostino Sarubbo <ago@gentoo.org> cronutils-1.1.ebuild:
+  Stable for amd64, wrt bug #406173
 
   20 Feb 2012; Mike Gilbert <floppym@gentoo.org> metadata.xml:
   Drop no-herd.
